# HandTrackerHUD

./: .cache  .gitignore  README.md  pyproject.toml  requirements.txt
src/: .cache  app_manager.py  app_manager_new.py  handtracker.py  handtracker_new.py  main.py  utils.py  voice_control.py
src/app_manager_components/: __init__.py  app_bar.py  miniplayer.py
src/components/: __init__.py  gesture_recognition.py  ui_components.py  volume_control.py  window_capture.py
src/hand_tracker_components/: __init__.py  quad_manager.py
